[tool.poetry]
name = "pypst"
version = "0.0.0"
description = ""
authors = ["Tilman Krokotsch <t.krokotsch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
frozenlist = "^1.4.1"
frozendict = "^2.4.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pytest = "^8.3.2"
mypy = "^1.11.1"
pandas-stubs = "^2.2.2.240807"
typst = "^0.11.1"
poethepoet = "^0.27.0"
commitizen = "^3.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test that compiles Typst code",
    "visual: mark a test as a visual test used for manual inspection",
]

[tool.poe.tasks]
unit = "pytest -m 'not integration and not visual'"
integration = "pytest -m integration"
visual = "pytest -m visual"
lint = "ruff check pypst tests"
lint-types = "mypy pypst"
lint-commits = "cz check --rev-range HEAD"
format = "ruff format pypst tests"
bump = "cz bump --changelog"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pypst/__init__.py"
]